--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #EBF1F4;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
 }
+
+.grid-box {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[10];
+      grid-template-columns: repeat(10, 1fr);
+  grid-auto-rows: 60px;
+}
+
+.grid-box .box {
+  padding: 5px;
+}
+
+.grid-box .box .box-content {
+  text-align: center;
+  border-radius: 10px;
+  background-color: rgba(54, 82, 109, 0.3);
+  color: #36526D;
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+}
+
+.grid-box .box .box-content.active {
+  background-color: #065446;
+  color: white;
+}
+
+.grid-box .box .box-content .index {
+  padding-top: 15px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 10px;
+}
+
+.grid-box .box .box-content .val {
+  font-size: 12px;
+  font-weight: 500;
+}
+/*# sourceMappingURL=index.css.map */
