--- a/src/index.scss
+++ b/src/index.scss
@@ -13,23 +13,47 @@ body {
   background-color: #EBF1F4;
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
+  background: #2C2C2C;
+  color: white;
+}
+
+.flex-container{
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .grid-box{
+  margin: 0 auto;
+  max-width: 500px;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-auto-rows: 60px;
+  width: 100%;
+  grid-template-columns: repeat(10, minmax(30px, 1fr));
+  grid-auto-rows: minmax(50px,1fr);
+  &::before{
+    padding-bottom: 100%;
+  }
   .box{
-    padding: 5px;
+    padding: 2px;
     .box-content{
+      width: 100%;
+      transition:  all 0.01s;
       text-align: center;
-      border-radius: 10px;
-       background-color: rgba(#36526D , 0.3);
-       color: #36526D;
+      border-radius: 2px;
+       background-color: rgba(#87C42B , 0.2);
+       color: #87C42B;
        cursor: pointer;
+       &:hover{
+        background-color: rgba(#FF9800 , 0.5);
+       }
        &.active{
-        background-color:  #065446;
+        background-color:  #87C42B;
         color: white;
+        &:hover{
+          background-color:  #87C42B;
+        }
        }
        height: 100%;
        width: 100%;
@@ -41,8 +65,35 @@ body {
        }
        .val{
          font-size: 12px;
-         font-weight: 500;
+         font-weight: 700;
        }
     }
   }
+}
+
+.modal-content{
+  color: black;
+}
+.image-container{
+  width: 100%;
+  margin: 0 auto;
+  max-width: 400px;
+  text-align: center;
+  img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+.square-input input{
+  color: black !important;
+}
+
+.config-input input{
+  color: white !important;
+}
+.config-input input::placeholder, label{
+  color: #87C42B !important;
+  font-weight: 500;
+  opacity: 1;
 }
