--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,7 @@ body {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(10, minmax(30px, 1fr));
-  grid-auto-rows: minmax(50px,1fr);
+  grid-auto-rows: minmax(45px,1fr);
   &::before{
     padding-bottom: 100%;
   }
@@ -77,7 +77,7 @@ body {
 .image-container{
   width: 100%;
   margin: 0 auto;
-  max-width: 400px;
+  max-width: 200px;
   text-align: center;
   img{
     width: 100%;
@@ -97,3 +97,10 @@ body {
   font-weight: 500;
   opacity: 1;
 }
+
+.neon-text{ color: #87C42B !important; }
+.orange-text{ color: #FF9800 !important; }
+
+.light_text{ font-weight:300; }
+.regular_text{ font-weight:500; }
+.heavy_text{ font-weight:700; }
