--- a/src/index.css
+++ b/src/index.css
@@ -7,83 +7,65 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
   width: 100%;
-  background-color: #EBF1F4;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 400;
-  background: #2C2C2C;
+  background: #1a223a;
   color: white;
 }
 
 .flex-container {
   min-height: 100vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .grid-box {
   margin: 0 auto;
   max-width: 500px;
-  display: -ms-grid;
   display: grid;
   width: 100%;
-  -ms-grid-columns: (minmax(30px, 1fr))[10];
-      grid-template-columns: repeat(10, minmax(30px, 1fr));
+  grid-template-columns: repeat(10, minmax(30px, 1fr));
   grid-auto-rows: minmax(45px, 1fr);
 }
-
 .grid-box::before {
   padding-bottom: 100%;
 }
-
 .grid-box .box {
   padding: 2px;
 }
-
 .grid-box .box .box-content {
   width: 100%;
-  -webkit-transition: all 0.01s;
   transition: all 0.01s;
   text-align: center;
   border-radius: 2px;
-  background-color: rgba(135, 196, 43, 0.2);
-  color: #87C42B;
+  background-color: rgba(9, 211, 255, 0.2);
+  color: #09D3FF;
   cursor: pointer;
   height: 100%;
   width: 100%;
 }
-
 .grid-box .box .box-content:hover {
-  background-color: rgba(255, 152, 0, 0.5);
-}
-
-.grid-box .box .box-content.active {
-  background-color: #87C42B;
+  background-color: rgba(9, 211, 255, 0.5);
   color: white;
 }
-
-.grid-box .box .box-content.active:hover {
-  background-color: #87C42B;
+.grid-box .box .box-content.active {
+  background-color: rgba(9, 211, 255, 0.6);
+  color: white;
 }
-
+.grid-box .box .box-content.active:hover {
+  background-color: rgba(9, 211, 255, 0.8);
+}
 .grid-box .box .box-content .index {
   padding-top: 15px;
   font-size: 16px;
   font-weight: 700;
   line-height: 10px;
 }
-
 .grid-box .box .box-content .val {
   font-size: 12px;
   font-weight: 700;
@@ -99,12 +81,10 @@ body {
   max-width: 200px;
   text-align: center;
 }
-
 .image-container img {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 .square-input input {
@@ -115,36 +95,18 @@ body {
   color: white !important;
 }
 
-.config-input input::-webkit-input-placeholder, label {
-  color: #87C42B !important;
-  font-weight: 500;
-  opacity: 1;
-}
-
-.config-input input:-ms-input-placeholder, label {
-  color: #87C42B !important;
-  font-weight: 500;
-  opacity: 1;
-}
-
-.config-input input::-ms-input-placeholder, label {
-  color: #87C42B !important;
-  font-weight: 500;
-  opacity: 1;
-}
-
 .config-input input::placeholder, label {
-  color: #87C42B !important;
+  color: #09D3FF !important;
   font-weight: 500;
   opacity: 1;
 }
 
 .neon-text {
-  color: #87C42B !important;
+  color: #09D3FF !important;
 }
 
 .orange-text {
-  color: #FF9800 !important;
+  color: #06DEC3 !important;
 }
 
 .light_text {
@@ -158,4 +120,5 @@ body {
 .heavy_text {
   font-weight: 700;
 }
+
 /*# sourceMappingURL=index.css.map */
