--- a/src/index.scss
+++ b/src/index.scss
@@ -6,14 +6,22 @@
           box-sizing: border-box;
 }
 
+
+$acc0: #06DEC3;
+$acc1: #3C7FB0;
+$acc2: #755AE4;
+$acc4: #09D3FF;
+$r2dark: #1a223a;
+$r2reg: #37599a;
+$r2lig: #63aae7;
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
   width: 100%;
-  background-color: #EBF1F4;
   font-family: 'Quicksand', sans-serif;
   font-weight: 400;
-  background: #2C2C2C;
+  background: $r2dark;
   color: white;
 }
 
@@ -42,17 +50,18 @@ body {
       transition:  all 0.01s;
       text-align: center;
       border-radius: 2px;
-       background-color: rgba(#87C42B , 0.2);
-       color: #87C42B;
+       background-color: rgba($acc4 , 0.2);
+       color: $acc4;
        cursor: pointer;
        &:hover{
-        background-color: rgba(#FF9800 , 0.5);
+        background-color: rgba($acc4 , 0.5);
+        color: white;
        }
        &.active{
-        background-color:  #87C42B;
+        background-color:  rgba($acc4 , 0.6);
         color: white;
         &:hover{
-          background-color:  #87C42B;
+          background-color:  rgba($acc4 , 0.8);
         }
        }
        height: 100%;
@@ -93,13 +102,13 @@ body {
   color: white !important;
 }
 .config-input input::placeholder, label{
-  color: #87C42B !important;
+  color: $acc4 !important;
   font-weight: 500;
   opacity: 1;
 }
 
-.neon-text{ color: #87C42B !important; }
-.orange-text{ color: #FF9800 !important; }
+.neon-text{ color: $acc4 !important; }
+.orange-text{ color: $acc0 !important; }
 
 .light_text{ font-weight:300; }
 .regular_text{ font-weight:500; }
